# ocroform-test

./: .gitignore  Dockerfile  Makefile  docker-compose.development.yml  pyproject.toml
src/api/: __init__.py
src/api/balance/: __init__.py  models.py  repository.py  routes.py  service.py
src/api/balance/schemas/: requests.py
src/core/: mocks.py  settings.py
src/core/bootstrap/: app.py  handlers.py  middlewares.py
src/core/db/: __init__.py  base.py  database.py  mixin.py  repository.py
src/core/ocr/: __init__.py  daily_balance_fetcher.py
